[project]
name = "background-subtraction"
version = "0.1.0"
description = "Preserve provenance of some background subtraction models."
readme = "README.md"
authors = [
    { name = "Peter Koval", email = "pkoval@vicomtech.org" }
]
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
]

[project.scripts]
background-subtraction = "background_subtraction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

